# pipemind-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  hf_space_header.md  inference.py  models.py  openenv.yaml  pyproject.toml  start.ps1  test_upload.csv
datasets/: broken_pipeline.ipynb  sales_broken.csv  transactions_broken.csv
server/: Dockerfile  __init__.py  agent_runner.py  app.py  pipeline_environment.py  requirements.txt  tasks.py  upload_handler.py
static/: index.html
